--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,19 @@ pennylane
 streamlit
 tensorflow
 torch
+streamlit==1.35.0
+qiskit==0.41.0
+pennylane==0.36.0
+scikit-learn==1.5.0
+numpy==1.23.5
+pandas==2.2.2
+matplotlib==3.9.0
+openai==1.30.4
+transformers
+torch
+transformers
+tensorflow
+transformers
+tensorflow
+pennylane
+streamlit
